--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "prisma": "^5.11.0",
     "typescript": "^5.4.3"
   }
 }
