--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,13 @@
   "author": "Evan Vance",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.1"
+    "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
